# resume-pipeline

./: .gitignore  README.html  README.md  llms.txt  pyproject.toml
.claude/skills/qa/: SKILL.md
.github/workflows/: tests.yml
docs/: README.html  README.md  concept.html  concept.md  render.py
docs/assets/: demo-profile.json
docs/decisions/: 0001-layouts-as-a-design-space.html  0001-layouts-as-a-design-space.md  0002-browse-not-search.html  0002-browse-not-search.md  0003-spec-names-are-written-out-in-full.html  0003-spec-names-are-written-out-in-full.md  0004-one-viewer-two-deliveries.html  0004-one-viewer-two-deliveries.md  0005-generated-files-never-sit-beside-source.html  0005-generated-files-never-sit-beside-source.md  0006-the-linter-reports-it-never-edits.html  0006-the-linter-reports-it-never-edits.md  0007-keep-the-in-house-renderer.html  0007-keep-the-in-house-renderer.md  0008-stints-as-a-local-schema-extension.html  0008-stints-as-a-local-schema-extension.md  0009-publish-remembers-your-choices.html  0009-publish-remembers-your-choices.md  0010-publish-preserves-the-previous-design.html  0010-publish-preserves-the-previous-design.md  0011-skills-split-by-intent.html  0011-skills-split-by-intent.md  README.html  README.md
docs/product/: README.html  README.md  concepts.html  concepts.md  overview.html  overview.md  platforms-and-status.html  platforms-and-status.md  user-guide.html  user-guide.md
docs/technical/: README.html  README.md  architecture.html  architecture.md  data-model-and-config.html  data-model-and-config.md  module-reference.html  module-reference.md  tech-stack.html  tech-stack.md  testing.html  testing.md
docs/tickets/: Tickets.html  Tickets.md  tickets.html  tickets.md
qa/: README.md  acceptance.py  product-map.md
src/resume_pipeline/: __init__.py  blocks.py  catalogue.py  cli.py  compose.py  deliverable.py  gallery.py  lint.py  markdown.py  model.py  pdf.py  scaffold.py  server.py  space.py  viewer.py
src/resume_pipeline/explore/: __init__.py  server.py  ui.py
src/resume_pipeline/themes/: __init__.py  ats.py  designed.py  editorial.py  slate.py
tests/: conftest.py  test_catalogue_and_server.py  test_cli.py  test_compose.py  test_lint.py  test_pdf.py  test_render.py  test_scaffold.py  test_space.py  test_stints.py  test_viewer.py
